--- a/about-cn-bcol.html
+++ b/about-cn-bcol.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>关于我们 CN-BCOL 2020 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛</title>
+    <title>关于我们 CN-BCOL 2021 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛</title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description" content="中国区块链奥林匹克竞赛委员会（CN-BCOL）是国际区块链奥林匹克委员会与中国的一些学术和行业专业人士共同组成。在IBCOL 2019上，三支代表中国的参赛队伍分别来自广州民航职业技术学院（获得IBCOL 2019-铜奖）、中山大学和南京农业大学。而今年的IBCOL 2020，CN-BCOL将会选出最多12支中国代表队伍参加竞赛。" />
     <meta name="author" content="" />
@@ -56,7 +56,7 @@
                 <li><a class="NavLinkComponent" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://wj.qq.com/s2/6039506/da39/" target="_blank">注册</a></li>
+                        href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
                 <li><a class="NavLinkComponent" route="" href="./en/about-cn-bcol.html" class="">EN</a></li>
             </ul>
         </div>
@@ -70,7 +70,7 @@
                     <li><a href="get-started-with-cn-bcol.html"> 参赛详情</a></li>
                     <li><a href="faq-cn-bcol.html">常见问题 </a></li>
                     <li class="featured"><a href="contact-cn-bcol.html"> 联络我们</a></li>
-                    <li><a href="https://wj.qq.com/s2/6039506/da39/" target="_blank">注册</a></li>
+                    <li><a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
                     <li><a class="NavLinkComponent" route="" href="./en/about-cn-bcol.html" class="">EN</a></li>
                 </ul>
             </div>
@@ -107,12 +107,10 @@
 
                     <div class="row mt-3 mb-5">
                         <div class="photoTitle">
-                            <h2 style="all:unset;">CN-BCOL 2020</h2>
+                            <h2 style="all:unset;">CN-BCOL</h2>
                         </div>
                         <div class="photoDesc pt-4 pb-4 pr-4 justify">
-                            中国区块链奥林匹克竞赛委员会（CN-BCOL）是国际区块链奥林匹克委员会与中国的一些学术和行业专业人士共同组成。在IBCOL
-                            2019上，三支代表中国的参赛队伍分别来自广州民航职业技术学院（获得IBCOL 2019-铜奖）、中山大学和南京农业大学。而今年的IBCOL
-                            2020，CN-BCOL将会选出最多12支中国代表队伍参加竞赛。
+                            CN-BCOL委员会是由IBCOL与中国的一些学术和行业专业人士共同组成。在IBCOL 2020上，五支代表中国的参赛队伍分别来自清华大学的Carbonbase（在国际赛中取得" IBCOL Award of Merit); 北京交通大学的Golden Pear（在国际赛中取得" IBCOL Award of Merit)；北京大学的Practice Together； 清华大学的LifeBLOCK；黑龙江大学的Support X.
                         </div>
                     </div>
 
@@ -121,20 +119,16 @@
                             <h2 style="all:unset;">CN-BCOL 合作伙伴</h2>
                         </div>
                         <div class="photoDesc pt-4 pb-4 pr-4 justify">
-                            TDI 和 iCollege
-                            为「国际区块链奥林匹克竞赛」（“IBCOL”）的中国委员会「中国区块链奥林匹克竞赛」（“CN-BCOL”）的合作伙伴，为中国参赛者提供培训及提名国家代表队参加「国际区块链奥林匹克竞赛2020」（“
-                            IBCOL 2020 ”）。
+                             iCollege和TDI 为「国际区块链奥林匹克竞赛」（“IBCOL”）的中国委员会「中国区块链奥林匹克竞赛」（“CN-BCOL”）的合作伙伴，为中国参赛者提供培训及提名国家代表队参加「国际区块链奥林匹克竞赛2021」（“ IBCOL 2021 ”）。
                         </div>
 
                         <div class="photoDesc pt-4 pb-4 pr-4 justify">
-                            TDI（Talent Development Institute）
-                            TDI（Talent Development Institute ）是来自加拿大的国际组织，TDI的使命是以寻找下一个天才为目标的培养人才（非牟利）机构。
-                            TDI透过与各种合作伙伴的培训计划教导学生知识和技能，以协助其发挥所有的潜力。TDI的证书课程更可帮助政府机构、企业、学院、私人公司等找到所需的人才，以满足市场的高需求。
+                           TDI（Talent Development Institute)<br>
+                           TDI（Talent Development Institute ）的使命是以寻找下一个天才为目标的培养人才机构。 TDI透过与各种合作伙伴的培训计划教导学生知识和技能，以协助其发挥所有的潜力。TDI的证书课程更可帮助政府机构、企业、学院、私人公司等找到所需的人才，以满足市场的高需求。
                         </div>
                         <div class="photoDesc pt-4 pb-4 pr-4 justify">
-                            iCollege
-                            iCollege是一间科技教育机构，iCollege的教学宗旨是intelligent & infinitas,
-                            课程设计以轻松、有趣但又有效的多元方式为目标，让学生都以聪明的学习方式学习。我们更会引发出学生内在无限的潜能，令其尽展所长。
+                            iCollege<br>
+                            iCollege是一间科技教育机构，iCollege的教学宗旨是intelligent & infinitas, 课程设计以轻松、有趣但又有效的多元方式为目标，让学生都以聪明的学习方式学习。引发出学生内在无限的潜能，令其尽展所长。
 
                         </div>
                     </div>
@@ -202,7 +196,7 @@
 
 
     <div class="home-content__button aboveFooterBtn">
-        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
+        <a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank"
             class="btn btn--primary btn--large fs18">注册</a>
                <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">发掘更多
         </a>
@@ -249,15 +243,11 @@
                 <div class=" footerHeaderText left"><b> 联络我们</b> </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="footerParaText mb-4 justify">中国区块链奥林匹克竞赛<br>
-                            <a href=""><b>cn@ibcol.org</b></a></p>
+                        <p class="footerParaText mb-4 justify">CN-BCOL办公室<br>
+                            <a href=""><b>pmo@cnbcol.org</b></a></p>
                     </div>
 
-                    <div class="col-12">
-                        <p class="footerParaText justify">国际区块链奥林匹克竞赛<br>
-                            <a href=""><b>2020@ibcol.org</b></a>
-                        </p>
-                    </div>
+            
 
                 </div>
             </div>
@@ -267,7 +257,7 @@
         </div>
 
         <div class="row">
-            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2020 International Blockchain
+            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2021 International Blockchain
                     Olympiad. All
                     rights
                     reserved.</span>
