--- a/contact-cn-bcol.html
+++ b/contact-cn-bcol.html
@@ -60,7 +60,7 @@
                 <li><a class="NavLinkComponent pageAnchorColor" route="" href="contact-cn-bcol.html" class=""> 联络我们</a>
                 </li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://wj.qq.com/s2/6039506/da39/" target="_blank">注册</a></li>
+                        href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
                 <li><a class="NavLinkComponent" route="" href="./en/contact-cn-bcol.html" class="">EN</a></li>
             </ul>
         </div>
@@ -74,7 +74,7 @@
                     <li><a href="get-started-with-cn-bcol.html"> 参赛详情</a></li>
                     <li><a href="faq-cn-bcol.html">常见问题 </a></li>
                     <li class="featured"><a href="contact-cn-bcol.html"> 联络我们</a></li>
-                    <li><a href="https://wj.qq.com/s2/6039506/da39/" target="_blank">注册</a></li>
+                    <li><a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
                     <li><a class="NavLinkComponent" route="" href="./en/contact-cn-bcol.html" class="">EN</a></li>
                 </ul>
             </div>
@@ -88,7 +88,7 @@
     <section class="s-section target-section topSection">
         <div class="container-fluid">
             <div class="row section-header ">
-                <h1 class="headerBlueText">联络中国区块链奥林匹克竞赛2020 ( CN-BCOL 2020) </h1>
+                <h1 class="headerBlueText">联络中国区块链奥林匹克竞赛2021 ( CN-BCOL 2021) </h1>
             </div>
         </div>
 
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     
-                    <!-- test -->
+                    <!-- 
 
                     <div class="row contactPerson colorBk mt-5">
                         <div class="col-md-6 col-sm-12 mediaCol-768-12 mediaCol-md-6 centre">
@@ -136,6 +136,8 @@
                             <div class="position"> 秘书长</div>
                         </div>
                     </div>
+
+                    test -->
 
                     <div class="row contactPerson colorBk mt-5">
                         <div class="col-md-6 col-sm-12 mediaCol-768-12 mediaCol-md-6 centre">
@@ -244,15 +246,11 @@
                 <div class=" footerHeaderText left"><b> 联络我们</b> </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="footerParaText mb-4 justify">中国区块链奥林匹克竞赛<br>
-                            <a href=""><b>cn@ibcol.org</b></a></p>
+                        <p class="footerParaText mb-4 justify">CN-BCOL办公室<br>
+                            <a href=""><b>pmo@cnbcol.org</b></a></p>
                     </div>
 
-                    <div class="col-12">
-                        <p class="footerParaText justify">国际区块链奥林匹克竞赛<br>
-                            <a href=""><b>2020@ibcol.org</b></a>
-                        </p>
-                    </div>
+                   
 
                 </div>
             </div>
@@ -262,7 +260,7 @@
         </div>
 
         <div class="row">
-            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2020 International Blockchain
+            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2021 International Blockchain
                     Olympiad. All
                     rights
                     reserved.</span>
