--- a/faq-cn-bcol.html
+++ b/faq-cn-bcol.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>常见问题 CN-BCOL 2020 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛
+    <title>常见问题 CN-BCOL 2021 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛
     </title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description" content="中国区块链奥林匹克竞赛委员会（CN-BCOL）是国际区块链奥林匹克委员会与中国的一些学术和行业专业人士共同组成。在IBCOL 2019上，三支代表中国的参赛队伍分别来自广州民航职业技术学院（获得IBCOL 2019-铜奖）、中山大学和南京农业大学。而今年的IBCOL 2020，CN-BCOL将会选出最多12支中国代表队伍参加竞赛。" />
@@ -59,7 +59,7 @@
                 <li><a class="NavLinkComponent pageAnchorColor" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://wj.qq.com/s2/6039506/da39/" target="_blank">注册</a></li>
+                        href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
                 <li><a class="NavLinkComponent" route="" href="./en/faq-cn-bcol.html" class="">EN</a></li>
             </ul>
         </div>
@@ -73,7 +73,7 @@
                     <li><a href="get-started-with-cn-bcol.html"> 参赛详情</a></li>
                     <li><a href="faq-cn-bcol.html">常见问题 </a></li>
                     <li class="featured"><a href="contact-cn-bcol.html"> 联络我们</a></li>
-                    <li><a href="https://wj.qq.com/s2/6039506/da39/" target="_blank">注册</a></li>
+                    <li><a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
                     <li><a class="NavLinkComponent" route="" href="./en/faq-cn-bcol.html" class="">EN</a></li>
                 </ul>
             </div>
@@ -87,14 +87,14 @@
     <section class="s-section target-section topSection">
         <div class="container-fluid">
             <div class="row section-header ">
-                <h1 class="headerBlueText">关于中国区块链奥林匹克竞赛2020（CN-BCOL 2020）常见问题</h1>
+                <h1 class="headerBlueText">关于CN-BCOL 2021区块链竞赛（CN-BCOL 2021）常见问题</h1>
             </div>
         </div>
 
         <div class="container-fluid">
             <div class="row">
                 <div class="photoTitle">
-                    <h2 style="all:unset;">关于我们 CN-BCOL 2020</h2>
+                    <h2 style="all:unset;">关于 CN-BCOL 2021</h2>
                 </div>
             </div>
         </div>
@@ -120,7 +120,7 @@
                         可以的，我们接受中文书写的白皮书。
                         <br><br>
                         <b>我参赛时使用语言是普通话，可以吗？</b><br>
-                        可以的，如果进入国际赛，英文不太好的团队可以向IBCOL陈述。 IBCOL会作出适当的安排，例如派志愿者当翻译。
+                        可以的，但如果进入国际赛需要以英文为主要沟通语言，英文不太好的团队建议组队时有英文好的队友在内。
                     </div>
                     <!-- <div class="mt-5 justify">
                         <b>Team Eligibility</b> — Projects are submitted by teams of one to six eligible competitors.
@@ -175,7 +175,8 @@
                         </h3>
                     </b></div>
                 <div class="fs18f">
-                    <div class="justify"> 参加中国区块链奥林匹克竞赛的白皮书是由中国区块链奥林匹克委员会进行评分，而CN-BCOL应根据国际区块链奥林匹克委员会会制定的指南评分白皮书。
+                    <div class="justify"> 
+                        参加CN-BCOL 2021区块链竞赛的白皮书是由CN-BCOL委员会进行评分，而CN-BCOL应根据IBCOL委员会制定的指南评分白皮书。
                     </div>
 
                 </div>
@@ -187,7 +188,7 @@
 
 
     <div class="home-content__button aboveFooterBtn mt-5">
-        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank" class="btn btn--primary btn--large fs18">注册</a>
+        <a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank" class="btn btn--primary btn--large fs18">注册</a>
         <a href="https://www.ibcol.org/faq.html" target="_blank" class="btn btn--large fs18">IBCOL 常见问题 </a>
     </div>
 
@@ -235,15 +236,11 @@
                 <div class=" footerHeaderText left"><b> 联络我们</b> </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="footerParaText mb-4 justify">中国区块链奥林匹克竞赛<br>
-                            <a href=""><b>cn@ibcol.org</b></a></p>
+                        <p class="footerParaText mb-4 justify">CN-BCOL办公室<br>
+                            <a href=""><b>pmo@cnbcol.org</b></a></p>
                     </div>
 
-                    <div class="col-12">
-                        <p class="footerParaText justify">国际区块链奥林匹克竞赛<br>
-                            <a href=""><b>2020@ibcol.org</b></a>
-                        </p>
-                    </div>
+                   
 
                 </div>
             </div>
@@ -253,7 +250,7 @@
         </div>
 
         <div class="row">
-            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2020 International Blockchain
+            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2021 International Blockchain
                     Olympiad. All
                     rights
                     reserved.</span>
