--- a/get-started-with-cn-bcol.html
+++ b/get-started-with-cn-bcol.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>开始参加 CN-BCOL 2020 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛
+    <title>开始参加 CN-BCOL 2021 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛
     </title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description" content="中国区块链奥林匹克竞赛委员会（CN-BCOL）是国际区块链奥林匹克委员会与中国的一些学术和行业专业人士共同组成。在IBCOL 2019上，三支代表中国的参赛队伍分别来自广州民航职业技术学院（获得IBCOL 2019-铜奖）、中山大学和南京农业大学。而今年的IBCOL 2020，CN-BCOL将会选出最多12支中国代表队伍参加竞赛。" />
@@ -60,7 +60,7 @@
                 <li><a class="NavLinkComponent" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://wj.qq.com/s2/6039506/da39/" target="_blank">注册</a></li>
+                        href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
                 <li><a class="NavLinkComponent" route="" href="./en/get-started-with-cn-bcol.html" class="">EN</a></li>
             </ul>
         </div>
@@ -74,7 +74,7 @@
                     <li><a href="get-started-with-cn-bcol.html"> 参赛详情</a></li>
                     <li><a href="faq-cn-bcol.html">常见问题 </a></li>
                     <li class="featured"><a href="contact-cn-bcol.html"> 联络我们</a></li>
-                    <li><a href="https://wj.qq.com/s2/6039506/da39/" target="_blank">注册</a></li>
+                    <li><a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
                     <li><a class="NavLinkComponent" route="" href="./en/get-started-with-cn-bcol.html" class="">EN</a>
                     </li>
                 </ul>
@@ -89,7 +89,7 @@
     <section class="s-section target-section topSection">
         <div class="container-fluid">
             <div class="row section-header">
-                <h1 class="headerBlueText">开始参加中国区块链奥林匹克竞赛2020（CN-BCOL 2020）</h1>
+                <h1 class="headerBlueText">开始参加CN-BCOL 2021区块链竞赛（CN-BCOL 2021）</h1>
             </div>
         </div>
 
@@ -98,7 +98,7 @@
                 <div class="col-md-6 col-sm-12 col-b-12-1200">
                     <div class="row">
                         <div class="photoTitle mb-5">
-                            <h2 style="all:unset;">参加CN-BCOL 2020参赛者条款</h2>
+                            <h2 style="all:unset;">参加CN-BCOL 2021参赛者条款</h2>
                         </div>
                         <div class="justify">在学和刚毕业的中学生＆大学生<br>
                             1-6人为一组<br>
@@ -129,17 +129,17 @@
                 <div class="col-md-6 col-sm-12 col-b-12-1200">
                     <div class="row">
                         <div class="photoTitle mb-5">
-                            <h2 style="all:unset;">IBCOL 2020详情</h2>
+                            <h2 style="all:unset;">IBCOL 2021详情</h2>
                         </div>
-                        <div class="justify">申请资格:任何年龄，任何身份，任何地区的学生（毕业不超过3年）<br>
-                            IBCOL 日子: 3-5 July 2020 (全日活动)<br>
-                            时间: 9am to 9pm (GMT+8)<br>
-                            IBCOL 比赛日: 第一天开幕，第二天研讨会，第三天项目路演<br>
-                            比赛形式: 线上比赛（Slack, Zoom, 腾讯会议）<br>
+                        <div class="justify">
+                            申请资格:任何年龄，任何身份，任何地区的学生（毕业不超过3年）<br>
+                            IBCOL 日子: 3-5 July 2021 (全日活动)<br>
+                             时间: 9am to 9pm (GMT+8)<br>
+                            IBCOL 比赛日:  第一天开幕，第二天研讨会，第三天项目路演<br>
+                            比赛形式: 线上＋线下比赛（Slack, Zoom）<br>
                             国家代表队数量: 12队<br>
-                            报名费: RMB100<br>
-                            培训课程&辅导课程: 开放给所有成功报名学生申请<br>
-                            奖学金: 开放给所有成功报名学生申请</div>
+                            奖学金: 开放给所有成功报名学生申请<br>
+                        </div>
 
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                 <div class="col-md-10 col-sm-12 mediaResourceText">
                     <div class=""><b>腾讯会议
                         </b><br>
-                        与iCollege联系，获取最新信息。info@iCollege.hk</div>
+                        与CN-BCOL联系，获取最新信息。pmo@cnbcol.org</div>
                 </div>
             </div>
 
@@ -209,7 +209,7 @@
 
 
     <div class="home-content__button aboveFooterBtn">
-        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
+        <a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank"
             class="btn btn--primary btn--large fs18">注册</a>
         <a href="https://www.ibcol.org/faq.html" target="_blank" class="btn btn--large fs18">常见问题 </a>
     </div>
@@ -257,15 +257,11 @@
                 <div class=" footerHeaderText"><b> 联络我们</b> </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="footerParaText mb-4 justify">中国区块链奥林匹克竞赛<br>
-                            <a href=""><b>cn@ibcol.org</b></a></p>
+                        <p class="footerParaText mb-4 justify">CN-BCOL办公室<br>
+                            <a href=""><b>pmo@cnbcol.org</b></a></p>
                     </div>
 
-                    <div class="col-12">
-                        <p class="footerParaText justify">国际区块链奥林匹克竞赛<br>
-                            <a href=""><b>2020@ibcol.org</b></a>
-                        </p>
-                    </div>
+                   
 
                 </div>
             </div>
@@ -275,7 +271,7 @@
         </div>
 
         <div class="row">
-            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2020 International Blockchain
+            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2021 International Blockchain
                     Olympiad.
                     All
                     rights
