--- a/how-to-join-cn-bcol.html
+++ b/how-to-join-cn-bcol.html
@@ -46,8 +46,8 @@
     <header class="s-header">
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logo/resized/IBCOL CN Horizontal v2.png"
-                    alt="IBCOL: International Blockchain Olympiad" />
+                <img src="images/logo/resized/cn_bcol_v2.png"
+                    alt="IBCOL: International Blockchain Olympiad" style="width:176px;height:150px;" />
             </a>
         </div>
         <div class="desktop-nav">
@@ -61,7 +61,7 @@
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
                         href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
-                <li><a class="NavLinkComponent" route="" href="./en/how-to-join-cn-bcol.html" class="">EN</a></li>
+             <!--    <li><a class="NavLinkComponent" route="" href="./en/how-to-join-cn-bcol.html" class="">EN</a></li>  -->
             </ul>
         </div>
 
@@ -75,7 +75,7 @@
                     <li><a href="faq-cn-bcol.html">常见问题 </a></li>
                     <li class="featured"><a href="contact-cn-bcol.html"> 联络我们</a></li>
                     <li><a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
-                    <li><a class="NavLinkComponent" route="" href="./en/how-to-join-cn-bcol.html" class="">EN</a></li>
+                 <!--    <li><a class="NavLinkComponent" route="" href="./en/how-to-join-cn-bcol.html" class="">EN</a></li>  -->
                 </ul>
             </div>
         </nav>
@@ -88,7 +88,7 @@
     <section class="s-section target-section topSection">
         <div class="container-fluid">
             <div class="row section-header ">
-                <h1 class="headerBlueText">中国参赛者如何参加国际区块链奥林匹克竞赛2021（IBCOL 2021）</h1>
+                <h1 class="headerBlueText">中国参赛者如何参加国际区块链竞赛2021（IBCOL 2021）</h1>
             </div>
         </div>
         <div class="container-fluid">
