--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <header class="s-header">
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logo/resized/IBCOL CN Horizontal v2 (dark).png"
-                    alt="IBCOL: International Blockchain Olympiad" />
+                <img src="images/logo/resized/cn_bcol_v2.png"
+                    alt="IBCOL: International Blockchain Olympiad" style="width:176px;height:150px;" />
             </a>
         </div>
         <div class="desktop-nav">
@@ -57,7 +57,7 @@
                 <li><a class="NavLinkComponent colorWt" route="" href="contact-cn-bcol.html" class="">联络我们</a></li>
                 <li><a class="NavLinkComponent colorWt regBorder" route="" href="https://wj.qq.com/s2/8125672/5d6d/"
                         target="_blank">注册</a></li>
-                <li><a class="NavLinkComponent colorWt" route="" href="./en/index.html" class="">EN</a></li>
+              <!--  <li><a class="NavLinkComponent colorWt" route="" href="./en/index.html" class="">EN</a></li>  -->
             </ul>
         </div>
 
@@ -71,7 +71,7 @@
                     <li><a href="faq-cn-bcol.html">常见问题 </a></li>
                     <li class="featured"><a href="contact-cn-bcol.html">联络我们</a></li>
                     <li><a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
-                    <li><a class="NavLinkComponent" route="" href="./en/index.html" class="">EN</a></li>
+                 <!--    <li><a class="NavLinkComponent" route="" href="./en/index.html" class="">EN</a></li> -->
                 </ul>
             </div>
         </nav>
