--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> GBA IBCOL IBCOL 大湾区块链奥林匹克竞赛</title>
+    <title> GBA IBCOL 2022 大湾区块链奥林匹克竞赛</title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description"
         content="中国区块链奥林匹克竞赛委员会（CN-BCOL）是国际区块链奥林匹克委员会与中国的一些学术和行业专业人士共同组成。在IBCOL 2019上，三支代表中国的参赛队伍分别来自广州民航职业技术学院（获得IBCOL 2019-铜奖）、中山大学和南京农业大学。而今年的IBCOL 2020，CN-BCOL将会选出最多12支中国代表队伍参加竞赛。" />
@@ -90,7 +90,7 @@
         <div class="home-content">
             <div class="row home-content__main">
                 
-                <h1 class="s-homeHeaderTextColor w100">CN-BCOL 2021区块链竞赛</h1>
+                <h1 class="s-homeHeaderTextColor w100">GBA IBCOL 2022 大湾区块链奥林匹克竞赛</h1>
 
                 <div class="s-homeTextColor ">2021 ​INTERNATIONAL BLOCKCHAIN OLYMPIAD 中国代表队选拔赛 </div>
 
