--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </li>
                 <li><a class="NavLinkComponent colorWt" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
                 <li><a class="NavLinkComponent colorWt" route="" href="contact-cn-bcol.html" class="">联络我们</a></li>
-                <li><a class="NavLinkComponent colorWt regBorder" route="" href="https://wj.qq.com/s2/8125672/5d6d/"
+                <li><a class="NavLinkComponent colorWt regBorder" route="" href="https://passport.ibcol.org/"
                         target="_blank">注册</a></li>
               <!--  <li><a class="NavLinkComponent colorWt" route="" href="./en/index.html" class="">EN</a></li>  -->
             </ul>
@@ -70,7 +70,7 @@
                     <li><a href="get-started-with-cn-bcol.html">参赛详情</a></li>
                     <li><a href="faq-cn-bcol.html">常见问题 </a></li>
                     <li class="featured"><a href="contact-cn-bcol.html">联络我们</a></li>
-                    <li><a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
+                    <li><a href="https://passport.ibcol.org/" target="_blank">注册</a></li>
                  <!--    <li><a class="NavLinkComponent" route="" href="./en/index.html" class="">EN</a></li> -->
                 </ul>
             </div>
@@ -90,12 +90,12 @@
         <div class="home-content">
             <div class="row home-content__main">
                 
-                <h1 class="s-homeHeaderTextColor w100">GBA IBCOL 2022 大湾区块链奥林匹克竞赛</h1>
+                <h1 class="s-homeHeaderTextColor w100">GBA IBCOL 2022 <br> 大湾区块链奥林匹克</h1>
 
-                <div class="s-homeTextColor ">2021 ​INTERNATIONAL BLOCKCHAIN OLYMPIAD 中国代表队选拔赛 </div>
+                <div class="s-homeTextColor "> </div>
 
                 <div class="home-content__button media12Btn mt-120">
-                    <a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank"
+                    <a href="https://passport.ibcol.org/" target="_blank"
                         class="btn btn--primary btn--large fs18">注册</a>
                     <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">发掘更多
 
@@ -173,143 +173,6 @@
         </div>
     </section>
 
-
-    <!-- <section class="s-section target-section" id="about">
-        <div class="row">
-            <div class="block-1-2">
-                <div class="col-block col-b-12">
-                    <div class="">
-                        <img src="images/wp.png">
-                    </div>
-                </div>
-                <div class="col-block col-b-12 photoWithTextSector pt-4">
-                    <div class="photoTitle ">
-                        <h2 style="all:unset;">​比赛日程</h2>
-                    </div>
-                    <div class="photoDesc justify">
-                        <div class="row w100 ">
-                            <div class="col-12  pl-0-w375">
-                                 <b>开始接受提交报名表格：
-                               2020年5月1日 </b>
-                            </div>
-                            <br>
-                            <div class="col-12 pl-0-w375 mt-3 ">
-                                <b> 开始接受提交项目白皮书 ：
-                               2020年5月1日 </b>
-                            </div>
-                            <br>
-                            <div class="col-12 pl-0-w375  mt-3">
-                                <b>培训课程& 辅导课程 ：
-                                2020年5月1日-2020年6月18日 </b>
-                            </div>
-                            <br>
-                            <div class="col-12 mt-3 pl-0-w375">
-                                <b>  宣布入选国际赛的中国代表队伍 ：
-                                2020年6月28日 </b>
-                            </div>
-
-                            <div class="col-12 pl-0-w375 mt-3">
-                                <b>IBCOL 2020：
-                               2020年7月3日-5日 </b>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- CNBCOL 2020 Award Winner / NBCOL 2020 Prizes
-
-    <section class="s-section target-section" id="about">
-        <div class="row my-auto colorBk">
-            <div class="photoTitle photoWithTextSector">
-                <h2 style="all:unset;">CNBCOL 2020 Award Winners</h2>
-            </div>
-
-
-            <div class="row w-100 justify-content-center">
-                <div class="col-md-4 col-sm-12 text-center">
-                    <div class="cursor-pointer" onclick="visitTeamPage(1)">
-                        <img src="../images/uni/清华大学.png">
-                        <div class="">
-                            <p class="fs-24 mb-0">Carbonbase</p>
-                            <p class="mb-0">国际区块链奥林匹克竞赛优异奖</p>
-                            <p>国家代表队</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-12 text-center cursor-pointer">
-                    <div class="cursor-pointer" onclick="visitTeamPage(2)">
-                        <img src="../images/uni/北京交通大学.png">
-                        <div class="">
-                            <p class="fs-24 mb-0">Golden
-                                Pear</p>
-                            <p class="mb-0">国际区块链奥林匹克竞赛优异奖</p>
-                            <p>国家代表队</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="row w-100 justify-content-center">
-                <div class="col-md-3 col-sm-12 text-center cursor-pointer">
-                    <div class="cursor-pointer" onclick="visitTeamPage(3)">
-                        <img src="../images/uni/北京大学.png">
-                        <div class="">
-                            <p class="fs-24 mb-0">PracticeTogether</p>
-                            <p>国家代表队</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-12 text-center cursor-pointer">
-                    <div class="cursor-pointer" onclick="visitTeamPage(4)">
-                        <img src="../images/uni/黑龙江大学.png">
-                        <div class="">
-                            <p class="fs-24 mb-0">Support X</p>
-                            <p>国家代表队</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-12 text-center cursor-pointer">
-                    <div class="cursor-pointer" onclick="visitTeamPage(5)">
-                        <img src="../images/uni/清华大学.png">
-                        <div class="">
-                            <p class="fs-24 mb-0">LifeBlock</p>
-                            <p>国家代表队</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <section class="s-section target-section" id="about">
-        <div class="row my-auto colorBk">
-            <div class="photoTitle photoWithTextSector">
-                <h2 style="all:unset;">CNBCOL 2020 Prizes</h2>
-            </div>
-            <div class="col-md-12 col-sm-12">
-                中国代表队可获得来自大学机构「法国里昂商学院em<b>lyon business school</b>」的奖励政策
-                <ul>
-                    <li>申请工商管理学士项目获得材料评审加分
-                    </li>
-                    <li>申请工商管理学士（上海1+3）项目获得材料评审加分 + VIP职业导师福利
-                    </li>
-                    <li>申请大学校硕士（GE）项目最高获得半额奖学金
-                        （2020QS Master in Management管理学硕士项目全球第14）
-                    </li>
-                    <li>申请金融学专业硕士项目最高获得15%奖学金
-                        （2020QS Master in Finance金融硕士项目全球第15）
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-            -->
 
     <section class="s-section target-section" id="about">
         <div class="row">
@@ -472,7 +335,7 @@
     </section>
 
     <div class="home-content__button aboveFooterBtn">
-        <a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank" class="btn btn--primary btn--large fs18">注册</a>
+        <a href="https://passport.ibcol.org/" target="_blank" class="btn btn--primary btn--large fs18">注册</a>
         <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">发掘更多
         </a>
     </div>
@@ -530,7 +393,7 @@
         </div>
 
         <div class="row">
-            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2020 International Blockchain
+            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2022 International Blockchain
                     Olympiad. All
                     rights
                     reserved.</span>
