--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
 
         <div class="home-content">
             <div class="row home-content__main">
-                
-                <h1 class="s-homeHeaderTextColor w100">GBA IBCOL 2022 <br> 大湾区块链奥林匹克</h1>
 
-                <div class="s-homeTextColor "> </div>
+                <div class="s-homeTextColor "> CN-BCOl 已合并成史上第一個</div>
+                
+                <h1 class="s-homeHeaderTextColor w100">GBA IBCOL 2022 <br> 大湾区区块链奥林匹克竞赛</h1>
 
                 <div class="home-content__button media12Btn mt-120">
                     <a href="https://passport.ibcol.org/" target="_blank"
                         class="btn btn--primary btn--large fs18">注册</a>
-                    <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">发掘更多
+                    <a href="https://cn.ibcol.org/about-cn-bcol.html" target="_blank" class="btn btn--large fs18">发掘更多
 
                     </a>
                 </div>
@@ -336,7 +336,7 @@
 
     <div class="home-content__button aboveFooterBtn">
         <a href="https://passport.ibcol.org/" target="_blank" class="btn btn--primary btn--large fs18">注册</a>
-        <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">发掘更多
+        <a href="https://cn.ibcol.org/about-cn-bcol.html" target="_blank" class="btn btn--large fs18">发掘更多
         </a>
     </div>
 
