--- a/get-started-with-cn-bcol.html
+++ b/get-started-with-cn-bcol.html
@@ -54,9 +54,7 @@
             <ul class="nav_list">
                 <li><a class="NavLinkComponent " route="" href="about-cn-bcol.html">关于我们</a></li>
                 <li><a class="NavLinkComponent " route="" href="how-to-join-cn-bcol.html"> 如何参加</a></li>
-                <li><a class="NavLinkComponent pageAnchorColor" route="" href="get-started-with-cn-bcol.html">Get
-                        Started</a>
-                </li>
+                <li><a class="NavLinkComponent pageAnchorColor" route="" href="get-started-with-cn-bcol.html">Get Started</a></li>
                 <li><a class="NavLinkComponent" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
