--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
                 <div class="s-homeTextColor "> CN-BCOl 已合并成史上第一個</div>
                 
-                <h1 class="s-homeHeaderTextColor w100">GBA IBCOL 2022 <br> 大湾区区块链奥林匹克竞赛 <br><br></h1>
+                <h1 class="s-homeHeaderTextColor w100">GBA IBCOL 2022 <br> 大湾区区块链奥林匹克竞赛</h1>
 
-
+                <div class="s-homeTextColor "></div>
 
                 <div class="home-content__button media12Btn mt-120">
                     <a href="https://passport.ibcol.org/" target="_blank"
