--- a/about-cn-bcol.html
+++ b/about-cn-bcol.html
@@ -49,14 +49,12 @@
         </div>
         <div class="desktop-nav">
             <ul class="nav_list">
-                <li><a class="NavLinkComponent pageAnchorColor" route="" href="about-cn-bcol.html">关于我们</a></li>
-                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-bcol.html"> 如何参加</a></li>
-                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-bcol.html"> 参赛详情</a>
-                </li>
-                <li><a class="NavLinkComponent" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
+                <li><a class="NavLinkComponent " route="" href="about-cn-bcol.html">关于我们</a></li>
+                <li><a class="NavLinkComponent " route="" href="gba.html"> 大湾区IBCOL</a></li>
+                <li><a class="NavLinkComponent" route="" href="workshops.html" class="">资源 </a></li>
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
-                <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
+                <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""   
+                        href="https://passport.ibcol.org/" target="_blank">注册</a></li>
                <!--  <li><a class="NavLinkComponent" route="" href="./en/about-cn-bcol.html" class="">EN</a></li> -->
             </ul>
         </div>
@@ -65,12 +63,12 @@
             <a href="#0" class="header-nav__close" title="close"><span>关闭</span></a>
             <div class="header-nav__content">
                 <ul class="header-nav__list">
-                    <li><a href="about-cn-bcol.html">关于我们</a></li>
-                    <li><a href="how-to-join-cn-bcol.html"> 如何参加</a></li>
-                    <li><a href="get-started-with-cn-bcol.html"> 参赛详情</a></li>
-                    <li><a href="faq-cn-bcol.html">常见问题 </a></li>
-                    <li class="featured"><a href="contact-cn-bcol.html"> 联络我们</a></li>
-                    <li><a href="https://wj.qq.com/s2/8125672/5d6d/" target="_blank">注册</a></li>
+                    <li><a class="NavLinkComponent " route="" href="about-cn-bcol.html">关于我们</a></li>
+                    <li><a class="NavLinkComponent " route="" href="gba.html"> 大湾区IBCOL</a></li>
+                    <li><a class="NavLinkComponent" route="" href="workshops.html" class="">资源 </a></li>
+                    <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
+                    <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""   
+                            href="https://passport.ibcol.org/" target="_blank">注册</a></li>
              <!--        <li><a class="NavLinkComponent" route="" href="./en/about-cn-bcol.html" class="">EN</a></li>  -->
                 </ul>
             </div>
