--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="desktop-nav">
             <ul class="nav_list">
                 <li><a class="NavLinkComponent colorWt" route="" href="about-cn-bcol.html">关于我们</a></li>
-                <li><a class="NavLinkComponent colorWt" route="" href="GBA.html">大湾区IBCOL</a></li>
+                <li><a class="NavLinkComponent colorWt" route="" href="gba.html">大湾区IBCOL</a></li>
                 <li><a class="NavLinkComponent colorWt" route="" href="workshops.html">资源</a></li>
                 <li><a class="NavLinkComponent colorWt" route="" href="contact-cn-bcol.html" class="">联络我们</a></li>
                 <li><a class="NavLinkComponent colorWt regBorder" route="" href="https://passport.ibcol.org/"target="_blank">注册</a></li>
@@ -63,7 +63,7 @@
             <div class="header-nav__content">
                 <ul class="header-nav__list">
                     <li><a class="NavLinkComponent colorWt" route="" href="about-cn-bcol.html">关于我们</a></li>
-                    <li><a class="NavLinkComponent colorWt" route="" href="GBA.html">大湾区IBCOL</a></li>
+                    <li><a class="NavLinkComponent colorWt" route="" href="gba.html">大湾区IBCOL</a></li>
                     <li><a class="NavLinkComponent colorWt" route="" href="workshops.html">资源</a></li>
                     <li><a class="NavLinkComponent colorWt" route="" href="contact-cn-bcol.html" class="">联络我们</a></li>
                     <li><a class="NavLinkComponent colorWt regBorder" route="" href="https://passport.ibcol.org/"target="_blank">注册</a></li>
@@ -170,30 +170,6 @@
             </div>
         </div>
     </section>
-
-
-    <section class="s-section target-section" id="about">
-        <div class="row">
-            <div class="block-1-2">
-                <div class="col-block col-b-12">
-                    <div class="">
-                        <img src="images/IBCOL 2021 Photos/data.png">
-                    </div>
-                </div>
-                <div class="col-block col-b-12 photoWithTextSector pt-4">
-                    <div class="photoTitle ">
-                        <h2 style="all:unset;">​比赛日程</h2>
-                    </div>
-                    <div class="photoDesc justify">
-                        <p>开始接受提交报名表格： 2021年2月01日<br><br>开始接受提交项目白皮书 ：2021年2月01日<br><br>培训课程& 辅导课程 ：2021年2月01日-2021年8月13日(暂定）<br><br>宣布入选国际赛的中国代表队伍 ：2021年9月（暂定）<br><br>IBCOL 2021：2021年10月08日-10日 </p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
 
 
     <section class="s-section target-section" id="about">
