update index.html basic info
update index.html basic information and logos for CN BCOL 2023

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> GBA IBCOL 2022 大湾区块链奥林匹克竞赛</title>
+    <title> GBA IBCOL 2023 大湾区块链奥林匹克竞赛</title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description"
-        content="中国区块链奥林匹克竞赛委员会（CN-BCOL）是国际区块链奥林匹克委员会与中国的一些学术和行业专业人士共同组成。在IBCOL 2019上，三支代表中国的参赛队伍分别来自广州民航职业技术学院（获得IBCOL 2019-铜奖）、中山大学和南京农业大学。而今年的IBCOL 2020，CN-BCOL将会选出最多12支中国代表队伍参加竞赛。" />
+        content="中国区块链奥林匹克竞赛委员会（CN-BCOL）是国际区块链奥林匹克委员会与中国的一些学术和行业专业人士共同组成。在IBCOL 2019上，三支代表中国的参赛队伍分别来自广州民航职业技术学院（获得IBCOL 2019-铜奖）、中山大学和南京农业大学。而今年的IBCOL 2023，CN-BCOL将会选出8支中国代表队伍参加竞赛。" />
     <meta name="author" content="" />
     <meta property="og:image" content="./images/logo/IBCOL-CN.png" />
 
@@ -86,9 +86,9 @@
         <div class="home-content">
             <div class="row home-content__main">
 
-                <div class="s-homeTextColor "> CN-BCOl 已合并成史上第一個</div>
+                <div class="s-homeTextColor "> CN-BCOL 已合并成史上第一個</div>
                 
-                <h1 class="s-homeHeaderTextColor w100">GBA IBCOL 2022 <br> 大湾区区块链奥林匹克竞赛</h1>
+                <h1 class="s-homeHeaderTextColor w100">GBA IBCOL 2023 <br> 大湾区区块链奥林匹克竞赛</h1>
 
                 <div class="s-homeTextColor "></div>
 
@@ -107,21 +107,14 @@
     <section id="sponsors" class=" s-section target-section pt-0">
         <div class="row section-header">
             <div class="photoTitle mt-5 mb-2 photoWithTextSector">
-                <h2 style="all:unset;">2021 牵头伙伴：</h2>
+                <h2 style="all:unset;">2023 牵头伙伴：</h2>
             </div>
             <div class="row">
                 <div class="block-1-3">
                     <div class="col-block widthSmFix paddingSmFix w100-w375">
-                        <a href="http://www.x-lab.tsinghua.edu.cn/" target="_blank">
+                        <a href="https://www.itc.gov.hk/en/index.html" target="_blank">
                             <div>
-                                <img class="sponsorImg" src="images/sponsor/TH_X_lab_2021.jpg">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-block widthSmFix paddingSmFix w100-w375">
-                        <a href="https://www.em-lyon.com/en" target="_blank">
-                            <div>
-                                <img class="sponsorImg" src="images/sponsor/em_lyon_2021.jpg">
+                                <img class="sponsorImg" src="images/sponsor/itc-logo-2023.png">
                             </div>
                         </a>
                     </div>
@@ -131,43 +124,20 @@
         
         <div class="row section-header">
             <div class="photoTitle photoWithTextSector">
-                <h2 style="all:unset;">2021 组办机构：</h2>
+                <h2 style="all:unset;">2023 组办机构：</h2>
             </div>
             <div class="row">
                 <div class="block-1-3">
                     <div class="col-block widthSmFix paddingSmFix w100-w375">
                         <a href="https://icollege.hk/" target="_blank">
                             <div>
-                                <img class="sponsorImg" src="images/sponsor/iCollege_2021.jpg">
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-block widthSmFix paddingSmFix w100-w375">
-                        <a href="https://talentdevelopment.institute/" target="_blank">
-                            <div>
-                                <img class="sponsorImg" src="images/sponsor/TDI_2021.jpg">
+                                <img class="sponsorImg" src="images/sponsor/logo-hong-kong-blockchain-society-(hkbcs).png">
                             </div>
                         </a>
                     </div>
                 </div>
             </div>  
 
-
-            <div class="row section-header ">
-            <div class="photoTitle photoWithTextSector">
-                <h2 style="all:unset;">2021 支持机构：</h2>
-            </div>
-            <div class="row">
-                <div class="block-1-3">
-                    <div class="col-block widthSmFix paddingSmFix w100-w375">
-                        <a href="https://icollege.hk/" target="_blank">
-                            <div>
-                                <img class="sponsorImg" src="images/sponsor/GDZT_logo.jpg">
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -185,7 +155,7 @@
                         <h2 style="all:unset;">什么是 IBCOL？</h2>
                     </div>
                     <div class="photoDesc justify">
-                        国际区块链奥林匹克竞赛（IBCOL）是一年一度的全球性竞赛，邀请在学和刚毕业的学生参加。今年已经是第四年举办了，因为疫情的关系，2020年以线上比赛的形式举行。IBCOL体现了“商业案例竞赛”，“学术白皮书会议”和“黑客马拉松”的特征：参赛队伍自行组队以1-6人为一队，成功报名参加比赛后要提交一份完整的有关区块链技术现实问题的描述以及解决方案；然后IBCOL在世界各国的委员会和合作机构会提名12队国家代表队；之后国家代表队需要创建海报板和演示文稿。
+                        国际区块链奥林匹克竞赛（IBCOL）是一年一度的全球性竞赛，邀请在学和刚毕业的学生参加。今年已经是第六年举办了，因为疫情的关系，2020年以线上比赛的形式举行。IBCOL体现了“商业案例竞赛”，“学术白皮书会议”和“黑客马拉松”的特征：参赛队伍自行组队以1-6人为一队，成功报名参加比赛后要提交一份完整的有关区块链技术现实问题的描述以及解决方案；然后IBCOL在世界各国的委员会和合作机构会提名8队国家代表队；之后国家代表队需要创建海报板和演示文稿。
 
 
                     </div>
@@ -210,7 +180,7 @@
                     <div class="photoTitle">
                         <h2 style="all:unset;">什么是CN-BCOL区块链竞赛？</h2>
                     </div>
-                    <div class="photoDesc justify"> 2021年的CN-BCOL区块链竞赛由“牵头伙伴”，“合作伙伴”及iCollege和TDI筹办，为成功报名的参赛者提供免费赛前培训，再选拔出国家代表队（可派最多12队）参加IBCOL国际赛，2021年大赛会是第四年举办，主办赛区是孟加拉国。
+                    <div class="photoDesc justify"> 2023年的CN-BCOL区块链竞赛由創新科技處牵头及香港區塊鏈學會筹办，为成功报名的参赛者提供免费赛前培训，再选拔出国家代表队（可派8队）参加IBCOL国际赛，2023年大赛会是第六年举办，主办赛区是阿姆斯特丹。
 
                     </div>
                 </div>
@@ -367,7 +337,7 @@
         </div>
 
         <div class="row">
-            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2022 International Blockchain
+            <div class="col-full ss-copyright mt-5 colorWt2"><span>Copyright © 2016-2023 International Blockchain
                     Olympiad. All
                     rights
                     reserved.</span>
